syntax = "proto3";
import "lorawan.proto";
import "core.proto";

package core;

message DataUpHandlerReq {
    bytes       AppEUI      = 1;
    bytes       DevEUI      = 2;
    uint32      FCnt        = 10;
    uint32      FPort       = 11;
    uint32      MType       = 12;
    bool	FCntUpReset = 13;
    bytes       Payload     = 20;
    Metadata    Metadata    = 30;
}

message DataUpHandlerRes {
    LoRaWANData Payload     = 20;
    Metadata    Metadata    = 30;
}

message DataDownHandlerReq {
    bytes       AppEUI      = 1;
    bytes       DevEUI      = 2;
    bytes       Payload     = 20;
    string      TTL         = 30;
}

message DataDownHandlerRes {}

message JoinHandlerReq {
    bytes               AppEUI      = 1;
    bytes               DevEUI      = 2;
    bytes               DevNonce    = 10;
    bytes               MIC         = 11;
    Metadata            Metadata    = 30;
}

message JoinHandlerRes {
    bytes               DevAddr     = 1;
    LoRaWANJoinAccept   Payload     = 20;
    bytes               NwkSKey     = 21;
    Metadata            Metadata    = 30;
}

service Handler {
    rpc HandleDataUp            (DataUpHandlerReq)      returns (DataUpHandlerRes);
    rpc HandleDataDown          (DataDownHandlerReq)    returns (DataDownHandlerRes);
    rpc HandleJoin              (JoinHandlerReq)        returns (JoinHandlerRes);
}
